FIX: [8.5] Login box shifted to the top when background image used. [t17455]
git-svn-id: http://svn.resourcespace.com/svn/rs/releases/8.5@11909 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1212,7 +1212,6 @@ a.FeaturedSimpleLink:hover, a.FeaturedSimpleLink:active  {
     padding: 10px 15px 0px 15px;
     border-radius: 5px;
     position: absolute;
-    top: -150px;
 }
 
 /* Manage External Shares */
